--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
 
 <div class="everydaycat">
     <h2>Everyday Catergories</h2>
+    <p id="evpar">Everyday Food has developed recipes with the home cook in mind. These delicious dishes featured<br>
+        on “RY Paris” call for simple ingredients that you already have in your pantry or can easily find at<br>
+        local grocery stores and farmers’ markets.</p>
+</div>
+
+<div class="grid1">
+    <div class="grid11"></div>
+    <div class="grid12"></div>
+    <div class="grid13"></div>
+    <p class="underphoto1">Breakfast Most Important Meal</p>
+    <p class="underphoto1">Vegetarian Lunch Ideas</p>
+    <p class="underphoto1">Cold-Weather Weeknight Dinners</p>
 </div>
 
 
