--- a/index.html
+++ b/index.html
@@ -34,6 +34,22 @@
     <p class="underphoto1">Cold-Weather Weeknight Dinners</p>
 </div>
 
+<div class="block">
+    <h2 class="healthy">Healthy Recipies of the Week</h2>
+    <p class="healthyy">This wooks top award winners to critically acclaimed recipe gems, check out those original recipes 
+    <br>from home cook and professional chefs around the country.</p>
+<div class="grid2">
+    <div class="grid21"></div>
+    <div class="grid22"></div>
+    <div class="grid23"></div>
+    <div class="grid24"></div>
+    <p class="underphoto2">Fajita-Stuffed Peppers</p>
+    <p class="underphoto2">Ree's Breakfast Muffins</p>
+    <p class="underphoto2">Eggplant Parmesan</p>
+    <p class="underphoto2">Teriyaki Chicken Thighs</p>
+</div>
+</div>
+
 
     
 </body>
