--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p class="start">START THE WEEK OFF RIGHT</p>
 </div>
 
-<div class="everydaycat">
+<div class="healthy">
     <h2>Everyday Catergories</h2>
     <p id="evpar">Everyday Food has developed recipes with the home cook in mind. These delicious dishes featured<br>
         on “RY Paris” call for simple ingredients that you already have in your pantry or can easily find at<br>
@@ -50,7 +50,34 @@
 </div>
 </div>
 
-
+<div><h2 class="healthy">Where to Eat</h2>
+<p class="healthyy">This is not the aspirational fluff of Instagram wall neon; it’s fact. Recent surveys have shown that a <br>
+    Majority of travelers consider food first when planning a trip, even ahead of where they sleep.  Add to <br>
+    This that people are also traveling more than ever before – earthlings logged a record-breaking 1.4 <br>
+    billion international trips last year – and it’s safe to say that the hunger for new culinary experiences <br>
+    Is more ravenous than ever.
+    </p>
+<p class="healthyy">While the endlessly alluring bistros of Paris, izakayas of Tokyo, shawarma stands of Tel Aviv, and <br>
+    tasting menus of Mexico City will always top many people’s lists of cravings, we’re continually on the <br>
+    lookout for something new to fill our bellies, our passports, and our feeds. 
+    </p></div>
     
+    <div class="grid1">
+        <div class="grid11"></div>
+        <div class="grid12"></div>
+        <div class="grid13"></div>
+        <p class="underphoto1">Best Sandwiches in America</p>
+        <p class="underphoto1">50 States of Pizza Slices</p>
+        <p class="underphoto1">City Guides</p>
+    </div>
+
+    <div class="orangeheader">
+        <p class="copy menu2">© 2020 BY PARIS</p>
+        <p class="sitemap menu2">Site Map</p>
+        <p class="privacy menu2">Privacy Policy</p>
+        <p class="about menu2">About</p>
+        <p class="adv menu2">Advertise</p>
+        <p class="help menu2">Help</p>
+    </div>
 </body>
 </html>
