fixed headers and footers

--- a/recipe.html
+++ b/recipe.html
@@ -5,11 +5,12 @@
     <link rel="stylesheet" href="css/recipe.css">
 </head>
 <body>
-    <div class="orangeheader">
-        <img class="logo" src="images/ryparis-logo.png">
-        <p class="poprec menu">Popular Recipies</p>
-        <p class="whatsnew menu">What's New</p>
-        <p class="categories menu">Categories</p>
+    <div class="header">
+        <div><img class="logo" src="images/ryparis-logo.png"></div>
+        <div class="pop menu">Popular Recipes</div>
+        <div class="wha menu">What's New</div>
+        <div class="cat menu">Categories</div>
+        <div class="mea menu">Meal Ideas</div>
     </div>
 
     <div class="photo1">
