--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-
-<div class="orangeheader">
-    <img class="logo" src="images/ryparis-logo.png">
-    <p class="poprec menu">Popular Recipies</p>
-    <p class="whatsnew menu">What's New</p>
-    <p class="categories menu">Categories</p>
-</div>
+    <div class="header">
+        <div><img class="logo" src="images/ryparis-logo.png"></div>
+        <div class="menu">Popular Recipes</div>
+        <div class="menu">What's New</div>
+        <div class="menu">Categories</div>
+        <div class="menu">Meal Ideas</div>
+    </div>
 
 <div class="photo1">
     <p class="start">START THE WEEK OFF RIGHT</p>
@@ -71,13 +71,14 @@
         <p class="underphoto1">City Guides</p>
     </div>
 
-    <div class="orangeheader">
-        <p class="copy menu2">© 2020 BY PARIS</p>
-        <p class="sitemap menu2">Site Map</p>
-        <p class="privacy menu2">Privacy Policy</p>
-        <p class="about menu2">About</p>
-        <p class="adv menu2">Advertise</p>
-        <p class="help menu2">Help</p>
+    <div class="footer">
+        <div class="footmenu copy">© 2020 RY PARIS</div>
+        <div class="footmenu menu2 site">Site Map</div>
+        <div class="footmenu menu2">Privacy Policy</div>
+        <div class="footmenu menu2">About</div>
+        <div class="footmenu menu2">Advertise</div>
+        <div class="footmenu menu2">Help</div>
     </div>
+
 </body>
 </html>
