added another section

--- a/recipe.html
+++ b/recipe.html
@@ -23,6 +23,21 @@
         <span class="label total">Total:</span><span class="info twentyfive">25 min</span><span class="label cook">Cook:</span><span class="info fifteen">15 min</span>
         </span>
     </div>
+
+    <div class="bengal"><h2>BENGAL BURGER</h2></div>
+
+    <div class="nomoredry"><p class="nomoredryy">“No more dry, lackluster burgers. These are juicy, and spices <br>
+        can be easily added or changed to suit anyone’s taste. Baste <br>
+        frequently with your favorite barbeque sause. If you find the <br>
+        meat mixture too mushy, just add more bread crumbs until <br>
+        it forms patties that hold their shape.”
+        </p></div>
     
+    <div class="grid">
+        <div>Ingredients</div>
+        <div>Directions</div>
+        <div></div>
+        <div></div>
+    </div>
 </body>
 </html>
