--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 </div>
 
 <div class="grid1">
-    <div class="grid11"></div>
-    <div class="grid12"></div>
-    <div class="grid13"></div>
+    <div class="grid11"><img class="images" src="images/breakfast-ideas.jpg"></div>
+    <div class="grid12"><img class="images" src="images/salad.png"></div>
+    <div class="grid13"><img class="images" src="images/cold-dinner.png"></div>
     <p class="underphoto1">Breakfast Most Important Meal</p>
     <p class="underphoto1">Vegetarian Lunch Ideas</p>
     <p class="underphoto1">Cold-Weather Weeknight Dinners</p>
@@ -39,10 +39,10 @@
     <p class="healthyy">This wooks top award winners to critically acclaimed recipe gems, check out those original recipes 
     <br>from home cook and professional chefs around the country.</p>
 <div class="grid2">
-    <div class="grid21"></div>
-    <div class="grid22"></div>
-    <div class="grid23"></div>
-    <div class="grid24"></div>
+    <div class="grid21"><img class="image2" src="images/fajita-peppers.jpeg"></div>
+    <div class="grid22"><img class="image2" src="images/muffins.jpeg"></div>
+    <div class="grid23"><img class="image2" src="images/eggplant-parmesan.jpg"></div>
+    <div class="grid24"><img class="image2" src="images/teriyaki-chicken.jpeg"></div>
     <p class="underphoto2">Fajita-Stuffed Peppers</p>
     <p class="underphoto2">Ree's Breakfast Muffins</p>
     <p class="underphoto2">Eggplant Parmesan</p>
@@ -63,9 +63,9 @@
     </p></div>
     
     <div class="grid1">
-        <div class="grid11"></div>
-        <div class="grid12"></div>
-        <div class="grid13"></div>
+        <div class="grid11"><img class="images" src="images/burger.jpg"></div>
+        <div class="grid12"><img class="images" src="images/pizza2.png"></div>
+        <div class="grid13"><img class="images" src="images/pasta.png"></div>
         <p class="underphoto1">Best Sandwiches in America</p>
         <p class="underphoto1">50 States of Pizza Slices</p>
         <p class="underphoto1">City Guides</p>
