--- a/recipe.html
+++ b/recipe.html
@@ -34,10 +34,55 @@
         </p></div>
     
     <div class="grid">
-        <div>Ingredients</div>
-        <div>Directions</div>
-        <div></div>
-        <div></div>
+        <div class="label2">Ingredients</div>
+        <div class="label2">Directions</div>
+        <div class="list"><ul>
+                <li>24 ounces ground chuch</li>
+                <li>1 teaspoon kosher salt</li>
+                <li>Freshly ground black pepper</li>
+                <li>Spice mix, optional, recipe follows</li>
+                <li>1 tablespoon vegetable oil</li>
+                <li>4 slices cheese, such as Cheddar, American cheese</li>
+                <li>4 soft hamburger-style buns, split</li>
+                <li>4 slices beefsteak tomatoes, optional</li>
+                <li>Assorted lettuces and greens, such as iceberg</li>
+                <li>Assorted mustards, optional</li>
+                <li>Mayonnaise, optional</li>
+                <li>Ketchup, optional</li>
+            </ul></div>
+            <div class="list"><ol>
+                <li>Preheat the oven to 450 degrees F. Place a roasting rack on a foil-lined baking sheet in the oven.</li><br>
+                <li>Using your hands, break the meat into small pieces and combine evenly but loosely on a parchment or waxed paper-lined baking sheet. Spread the meat out and season it generously with salt and pepper. If desired, add the spice mix at this time.</li><br>
+                <li>Divide the meat into 4 portions (about 6 ounces each). Using your hands, form each portion into a ball-shape by gently tossing it from 1 hand to the other. (Don't over work or press too firmly on the meat.) Gently form each portion into apatty 3 1/2 inches wide and 1-inch-thick.</li><br>
+                <li>Preheat a large cast iron skillet over medium-low heat for 5 minutes. Raise the heat to high and add the oil. Add the patties and cook, turning once, until well-browned, about 2 minutes each side.</li><br>
+                <li>Using a spatula, transfer the hamburgers to the roasting rack in the oven and continue cooking to desired doneness, 8 to 9 minutes for medium-rare, 10 to 11 minutes for medium, and 13 to 15 miutes for well-done. If you are using the cheese, top the hamburgers during their last couple of minutes of cooking to melt.</li><br>
+                <li>Transfer the hamburers to a plate, let rest for a couple minutes before serving. Meanwhile, toast the hamburger buns. Assemble the hamburgers with the condiments and toppings of your choice.<br> Serve.</li><br>
+                <li>When cooking on a countertop grill, t urn on grill, then place burgers on the heated grill.</li><br>
+                <strong>Timing for a countertop grill:</strong>
+                <li>For Medium-Rare: Cook for 3 minutes covered and then unplug the machine and continue to cook covered for 2 to 3 more minutes.</li><br>
+                <li>For Medium: Cook for 4 minutes covered and then unplug the machine and continue to cook covered for 4 more minutes.</li><br>
+                <li>For Well: Cook for 5 minutes covered and then unplug the machine.</li>
+            </ol></div>
+            <div class="spicemix">
+                <h4 class="spicemixx">Spice Mix</h4>
+                <ul>
+                    <li>1 tablespoon Worcestershire sause</li>
+                    <li>2 teaspoons onion powder</li>
+                    <li>2 teaspoons onion powder</li>
+                    <li>Hot Sause, to taste</li>
+                </ul>
+            </div>
+        </div>
+        
+    </div>
+
+    <div class="footer">
+        <div class="footmenu copy">© 2020 RY PARIS</div>
+        <div class="footmenu menu2 site">Site Map</div>
+        <div class="footmenu menu2">Privacy Policy</div>
+        <div class="footmenu menu2">About</div>
+        <div class="footmenu menu2">Advertise</div>
+        <div class="footmenu menu2">Help</div>
     </div>
 </body>
 </html>
