--- a/recipe.html
+++ b/recipe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="css/recipe.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="header">
@@ -13,7 +13,7 @@
         <div class="mea menu">Meal Ideas</div>
     </div>
 
-    <div class="photo1">
+    <div class="photo2">
     </div>
 
     <div class="timestuff">
