--- a/recipe.html
+++ b/recipe.html
@@ -7,10 +7,10 @@
 <body>
     <div class="header">
         <div><img class="logo" src="images/ryparis-logo.png"></div>
-        <div class="pop menu">Popular Recipes</div>
-        <div class="wha menu">What's New</div>
-        <div class="cat menu">Categories</div>
-        <div class="mea menu">Meal Ideas</div>
+        <div class="menu"><a href="#">Popular Recipes</a></div>
+        <div class="menu"><a href="#">What's New</a></div>
+        <div class="menu"><a href="#">Categories</a></div>
+        <div class="menu"><a href="#">Meal Ideas</a></div>
     </div>
 
     <div class="photo2">
@@ -78,11 +78,11 @@
 
     <div class="footer">
         <div class="footmenu copy">© 2020 RY PARIS</div>
-        <div class="footmenu menu2 site">Site Map</div>
-        <div class="footmenu menu2">Privacy Policy</div>
-        <div class="footmenu menu2">About</div>
-        <div class="footmenu menu2">Advertise</div>
-        <div class="footmenu menu2">Help</div>
+        <div class="footmenu menu2 site"><a href="#">Site Map</a></div>
+        <div class="footmenu menu2"><a href="#">Privacy Policy</a></div>
+        <div class="footmenu menu2"><a href="#">About</a></div>
+        <div class="footmenu menu2"><a href="#">Advertise</a></div>
+        <div class="footmenu menu2"><a href="#">Help</a></div>
     </div>
 </body>
 </html>
